@@ -1,6 +1,7 @@
 package com.amalitech.gpuconfigurator.controller;
 
 import com.amalitech.gpuconfigurator.dto.GenericResponse;
+import com.amalitech.gpuconfigurator.dto.attribute.AttributeResponse;
 import com.amalitech.gpuconfigurator.dto.categoryconfig.*;
 import com.amalitech.gpuconfigurator.service.categoryConfig.CategoryConfigServiceImpl;
 import com.fasterxml.jackson.core.JsonProcessingException;
@@ -35,14 +36,28 @@ class CategoryConfigControllerTest {
     private static ObjectMapper objectMapper;
     @MockBean
     private CategoryConfigServiceImpl categoryConfigService;
+
+    private AttributeResponse attributeResponse;
     @BeforeAll
     public static void setUp() {
         objectMapper = new ObjectMapper();
     }
 
+    @BeforeEach
+    public void tearUp() {
+        attributeResponse = AttributeResponse.builder()
+                .isRequired(false)
+                .description("hello world")
+                .unit("12")
+                .isMeasured(false)
+                .attributeOptions(new ArrayList<>())
+                .id(UUID.randomUUID())
+                .build();
+    }
+
     @Test
     void addConfig() throws Exception {
-        CategoryConfigRequest request = new CategoryConfigRequest("CategoryName", Collections.emptyList());
+        CategoryConfigRequest request = new CategoryConfigRequest("CategoryName", "./hello_world.jpg",  Collections.emptyList());
         GenericResponse response = new GenericResponse(200, "Config added successfully");
 
         Mockito.when(categoryConfigService.createCategoryConfig(Mockito.any())).thenReturn(response);
@@ -59,7 +74,12 @@ class CategoryConfigControllerTest {
     @Test
     void getConfigs() throws Exception {
         String categoryId = UUID.randomUUID().toString();
-        CategoryConfigResponseDto responseDto = new CategoryConfigResponseDto(UUID.randomUUID().toString(), new CategoryResponse( categoryId, "CategoryName"), Collections.emptyMap());
+        CategoryConfigResponseDto responseDto = new CategoryConfigResponseDto(UUID.randomUUID().toString(),
+                new CategoryResponse(
+                        categoryId,
+                        "CategoryName",
+                        "./hello_world.jpg"),
+                Collections.emptyMap(), 8, List.of(VariantStockLeastDto.builder().attributeResponse("id").name("attribute least").inStock(8).build()));
 
         Mockito.when(categoryConfigService.getCategoryConfigByCategory(categoryId)).thenReturn(responseDto);
 
@@ -74,7 +94,7 @@ class CategoryConfigControllerTest {
     @Test
     void getConfigsUser() throws Exception {
         String categoryId = UUID.randomUUID().toString();
-        CategoryConfigResponseDto responseDto = new CategoryConfigResponseDto(UUID.randomUUID().toString(), new CategoryResponse(categoryId, "CategoryName"), Collections.emptyMap());
+        CategoryConfigResponseDto responseDto = new CategoryConfigResponseDto(UUID.randomUUID().toString(), new CategoryResponse(categoryId, "CategoryName", "./hello_world.jpg"), Collections.emptyMap(), 8, null);
 
         Mockito.when(categoryConfigService.getCategoryConfigByCategory(categoryId)).thenReturn(responseDto);
 
@@ -89,7 +109,7 @@ class CategoryConfigControllerTest {
     @Test
     void getAllCategoryConfig() throws Exception {
 
-        List<CategoryListResponse> responseList = Collections.singletonList(new CategoryListResponse("CategoryName", UUID.randomUUID().toString(), Collections.emptyList(), 0L));
+        List<CategoryListResponse> responseList = Collections.singletonList(new CategoryListResponse("CategoryName", UUID.randomUUID().toString(), Collections.emptyMap(), 0L));
 
         Mockito.when(categoryConfigService.getCategoryListResponses()).thenReturn(responseList);
 
@@ -104,7 +124,13 @@ class CategoryConfigControllerTest {
     @Test
     void testGetAllCategoryConfigById() throws Exception {
         String categoryId = UUID.randomUUID().toString();
-        CompatibleOptionGetResponse response = new CompatibleOptionGetResponse("CategoryName", categoryId, Collections.emptyList());
+        CompatibleOptionGetResponse response = new CompatibleOptionGetResponse("CategoryName", categoryId, "./hello_world.jpg", Collections.emptyList(),
+                4, List.of(VariantStockLeastDto
+                        .builder()
+                        .attributeResponse("id")
+                        .name("test variant")
+                        .inStock(8)
+                        .build()), 2);
 
         Mockito.when(categoryConfigService.getCategoryAndCompatibleOption(UUID.fromString(categoryId))).thenReturn(response);
 
@@ -112,12 +138,13 @@ class CategoryConfigControllerTest {
 
         result.andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(response.id()))
-                .andExpect(jsonPath("$.name").value(response.name()));
+                .andExpect(jsonPath("$.name").value(response.name()))
+                .andExpect(jsonPath("$.configPrice").value(response.configPrice()));
     }
 
     @Test
     void testUpdate() throws Exception {
-        CompatibleOptionEditResponse request = new CompatibleOptionEditResponse("CategoryName", "1", Collections.emptyList());
+        CompatibleOptionEditResponse request = new CompatibleOptionEditResponse("CategoryName", UUID.randomUUID().toString() , "1", Collections.emptyList());
         GenericResponse response = new GenericResponse(200, "Category and config updated successfully");
 
         Mockito.when(categoryConfigService.updateCategoryAndConfigs(Mockito.any())).thenReturn(response);
